--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@beanc16/joi-helpers": "^0.2.3",
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^14.1.0",
+    "dotnet-responses": "^1.7.0",
     "express": "^4.17.2",
     "joi": "^17.5.0",
     "mongodb": "^4.3.0",
+    "mongodb-controller": "^0.2.1",
     "nodemon": "^2.0.15"
   }
 }
