--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A microservice template",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start-dev": "node index.js",
     "start": "nodemon index.js"
