--- a/package.json
+++ b/package.json
@@ -5,20 +5,37 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "vercel-build": "npm run build",
+    "build": "rm -rf api && tsc",
+    "start": "node api/index.js",
+    "start:dev": "node --loader ts-node/esm --watch index.ts",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@beanc16/joi-helpers": "^0.2.3",
-    "@beanc16/logger": "^1.3.0",
-    "axios": "^0.24.0",
-    "body-parser": "^1.19.1",
+    "@beanc16/joi-helpers": "^0.6.0",
+    "@beanc16/logger": "^1.4.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^14.1.0",
-    "dotnet-responses": "^1.7.0",
-    "express": "^4.17.2",
+    "dotenv": "^16.4.5",
+    "dotnet-responses": "^1.8.0",
+    "express": "^4.21.1",
     "joi": "^17.5.0",
-    "mongodb": "^4.3.0",
-    "mongodb-controller": "^0.2.1",
-    "nodemon": "^2.0.15"
+    "mongodb": "^6.3.0",
+    "mongodb-controller": "^1.6.4"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.9.2",
+    "@swc/jest": "^0.2.37",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.9.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "ts-jest-resolver": "^2.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
